documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P13W32API VOID __stdcall P13_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);

P13W32API USHORT __stdcall P13_RAMRdB(ULONG addrval,HCARD handleval);

P13W32API ULONG __stdcall P13_RAMRdL(ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMRdsW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMRdsxW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API USHORT __stdcall P13_RAMRdW(ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWipe(HCARD handleval);

P13W32API VOID __stdcall P13_RAMWipeEx(USHORT value,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrsW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrsxW(LPUSHORT valueptr,ULONG addrval,USHORT countval,HCARD handleval);

P13W32API VOID __stdcall P13_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTConfigEx(ULONG configval,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTConfigExx(ULONG configval,INT taval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTReset(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_RTStatus(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_RTSWDRd(INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_SARRdW(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_SARWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedBuildEx(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,LPUSHORT period,LPVOID buf,USHORT bufsize,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedBuildExx(ULONG frametime,USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT period,LPVOID buf,USHORT bufsize,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedCalc(LPMSGADDR msgaddr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedInsEnd(HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedInsMsg(USHORT index,LPMSGADDR msgaddr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SchedInsStart(ULONG frametime,USHORT count,HCARD handleval);

P13W32API USHORT __stdcall P13_SchedMaxval(LPUSHORT array,USHORT arraycount);

P13W32API USHORT __stdcall P13_SchedMinval(LPUSHORT array,USHORT arraycount);

P13W32API ERRVAL __stdcall P13_SerialClear(HCARD handleval);

P13W32API ERRVAL __stdcall P13_SerialConfig(ULONG configval,USHORT count,HCARD handleval);

P13W32API ERRVAL __stdcall P13_SerialConfigEx(ULONG configval,USHORT count,HCARD handleval);

P13W32API INT __stdcall P13_SerialStatus(HCARD handleval);

P13W32API ULONG __stdcall P13_SerialWr(LPUSHORT buf,HCARD handleval);

P13W32API ULONG __stdcall P13_Shl(ULONG dataval,USHORT cntval);

P13W32API ULONG __stdcall P13_Shr(ULONG dataval,USHORT cntval);

P13W32API VOID __stdcall P13_TimerClear(HCARD handleval);

P13W32API ULONG __stdcall P13_TimerRd(HCARD handleval);

P13W32API INT __stdcall P13_TimerResolution(INT timerresol,HCARD handleval);

P13W32API USHORT __stdcall P13_TimerResolutionEx(USHORT timershift,HCARD handleval);

P13W32API INT __stdcall P13_ValAsciiCmpi(LPSTR str1,LPSTR str2);

P13W32API LPSTR __stdcall P13_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

P13W32API VOID __stdcall P13_ValAsciiTrimLead(LPSTR buf);

P13W32API VOID __stdcall P13_ValAsciiTrimTrail(LPSTR buf);

P13W32API ULONG __stdcall P13_ValFromAscii(LPCSTR asciistr,INT radixval);

P13W32API USHORT __stdcall P13_ValGetBits(USHORT oldvalue,INT startbit,INT endbit);

P13W32API LPSTR __stdcall P13_ValIncAscii(LPSTR asciistr);

P13W32API LPSTR __stdcall P13_ValInccAscii(LPSTR asciistr);

P13W32API BOOL __stdcall P13_ValIsLower(INT value);

P13W32API INT __stdcall P13_ValLenAscii(INT numbits,INT radixval);

P13W32API USHORT __stdcall P13_ValPackRTCWD(INT MCflag,INT TAval,INT TRflag,INT SAval,INT count);

P13W32API USHORT __stdcall P13_ValPutBits(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);

P13W32API LPSTR __stdcall P13_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

P13W32API INT __stdcall P13_ValToUpper(INT value);

P13W32API VOID __stdcall P13_ValUnpackRTCWD(USHORT cwd,LPINT BCASTflag,LPINT MCflag,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT count);

/**
*
*  Bus controller configuration options
*
**/

#define BCCFG_DEFAULT       0x00000000L     //Select all default settings
#define BCCFG_ENABLE        0x00000000L     //Enable bus controller (default)
#define BCCFG_DISABLE       0x00000001L     //Disable bus controller
#define BCCFG_TRIGNONE      0x00000000L     //No trigger (default)
#define BCCFG_TRIGEXT       0x00000010L     //Trigger external
#define BCCFG_TRIGSTART     0x00000020L     //Trigger external start
#define BCCFG_NOINTHALT     0x00000000L     //Do not generate interrupt on halt (default)
#define BCCFG_INTHALT       0x00000100L     //Generate interrupt on halt
#define BCCFG_NOINTPAUSE    0x00000000L     //Do not generate interrupt on pause (default)
#define BCCFG_INTPAUSE      0x00000200L     //Generate interrupt on pause
#define BCCFG_NOLOOPMAX     0x00000000L     //Disable maximum loop count (default)
#define BCCFG_LOOPMAX       0x00001000L     //Enable maximum loop count
#define BCCFG_NOSTEP        0x00000000L     //Disable single stepping (default)
#define BCCFG_STEP          0x00002000L     //Enable single stepping
#define BCCFG_MC01          0x00000000L     //Select SA=00000 or SA=11111 for mode codes (default)
#define BCCFG_MC1           0x01000000L     //Select SA=11111 for mode codes
#define BCCFG_MC0           0x02000000L     //Select SA=00000 for mode codes
#define BCCFG_MCNONE        0x03000000L     //Disable mode codes
#define BCCFG_SYNCALL       0x00000000L     //*Sync on all messages (default)
#define BCCFG_SYNCSEL       0x40000000L     //*Selective sync