documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32VB.BAS

Public Declare Function P13_ProgWrW Lib "P13W32.DLL" Alias "_P13_ProgWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_RAMFill Lib "P13W32.DLL" Alias "_P13_RAMFill@16" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RAMRdB Lib "P13W32.DLL" Alias "_P13_RAMRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_RAMRdL Lib "P13W32.DLL" Alias "_P13_RAMRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RAMRdsW Lib "P13W32.DLL" Alias "_P13_RAMRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_RAMRdsxW Lib "P13W32.DLL" Alias "_P13_RAMRdsxW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_RAMRdW Lib "P13W32.DLL" Alias "_P13_RAMRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_RAMWipe Lib "P13W32.DLL" Alias "_P13_RAMWipe@4" (ByVal handleval As Long) As Long
Public Declare Function P13_RAMWipeEx Lib "P13W32.DLL" Alias "_P13_RAMWipeEx@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_RAMWrB Lib "P13W32.DLL" Alias "_P13_RAMWrB@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RAMWrL Lib "P13W32.DLL" Alias "_P13_RAMWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RAMWrsW Lib "P13W32.DLL" Alias "_P13_RAMWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_RAMWrsxW Lib "P13W32.DLL" Alias "_P13_RAMWrsxW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_RAMWrW Lib "P13W32.DLL" Alias "_P13_RAMWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTConfigEx Lib "P13W32.DLL" Alias "_P13_RTConfigEx@12" (ByVal configval As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTConfigExx Lib "P13W32.DLL" Alias "_P13_RTConfigExx@12" (ByVal configval As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTReset Lib "P13W32.DLL" Alias "_P13_RTReset@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTStatus Lib "P13W32.DLL" Alias "_P13_RTStatus@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_RTSWDRd Lib "P13W32.DLL" Alias "_P13_RTSWDRd@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_SARRdW Lib "P13W32.DLL" Alias "_P13_SARRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_SARWrW Lib "P13W32.DLL" Alias "_P13_SARWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_SchedBuild Lib "P13W32.DLL" Alias "_P13_SchedBuild@16" (ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef freq As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_SchedBuildEx Lib "P13W32.DLL" Alias "_P13_SchedBuildEx@28" (ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef freq As Integer, ByRef period As Integer, ByRef buf As Long, ByVal bufsize As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_SchedBuildExx Lib "P13W32.DLL" Alias "_P13_SchedBuildExx@28" (ByVal frametime As Long, ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef period As Integer, ByRef buf As Long, ByVal bufsize As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_SchedCalc Lib "P13W32.DLL" Alias "_P13_SchedCalc@8" (ByRef msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_SchedInsEnd Lib "P13W32.DLL" Alias "_P13_SchedInsEnd@4" (ByVal handleval As Long) As Long
Public Declare Function P13_SchedInsMsg Lib "P13W32.DLL" Alias "_P13_SchedInsMsg@12" (ByVal index As Integer, ByRef msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_SchedInsStart Lib "P13W32.DLL" Alias "_P13_SchedInsStart@12" (ByVal frametime As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_SchedMaxval Lib "P13W32.DLL" Alias "_P13_SchedMaxval@8" (ByRef arrayval As Integer, ByVal arrayvalcount As Integer) As Integer
Public Declare Function P13_SchedMinval Lib "P13W32.DLL" Alias "_P13_SchedMinval@8" (ByRef arrayval As Integer, ByVal arrayvalcount As Integer) As Integer
Public Declare Function P13_SerialClear Lib "P13W32.DLL" Alias "_P13_SerialClear@4" (ByVal handleval As Long) As Long
Public Declare Function P13_SerialConfig Lib "P13W32.DLL" Alias "_P13_SerialConfig@12" (ByVal configval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_SerialConfigEx Lib "P13W32.DLL" Alias "_P13_SerialConfigEx@12" (ByVal configval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_SerialStatus Lib "P13W32.DLL" Alias "_P13_SerialStatus@4" (ByVal handleval As Long) As Long
Public Declare Function P13_SerialWr Lib "P13W32.DLL" Alias "_P13_SerialWr@8" (ByRef buf As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_Shl Lib "P13W32.DLL" Alias "_P13_Shl@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function P13_Shr Lib "P13W32.DLL" Alias "_P13_Shr@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function P13_TimerClear Lib "P13W32.DLL" Alias "_P13_TimerClear@4" (ByVal handleval As Long) As Long
Public Declare Function P13_TimerRd Lib "P13W32.DLL" Alias "_P13_TimerRd@4" (ByVal handleval As Long) As Long
Public Declare Function P13_TimerResolution Lib "P13W32.DLL" Alias "_P13_TimerResolution@8" (ByVal timerresol As Long, ByVal handleval As Long) As Long
Public Declare Function P13_TimerResolutionEx Lib "P13W32.DLL" Alias "_P13_TimerResolutionEx@8" (ByVal timershift As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_ValAsciiCmpi Lib "P13W32.DLL" Alias "_P13_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Long
Public Declare Function P13_ValAsciiCpy Lib "P13W32.DLL" Alias "_P13_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Long) As Long
Public Declare Function P13_ValAsciiTrimLead Lib "P13W32.DLL" Alias "_P13_ValAsciiTrimLead@4" (ByRef buf As String) As Long
Public Declare Function P13_ValAsciiTrimTrail Lib "P13W32.DLL" Alias "_P13_ValAsciiTrimTrail@4" (ByRef buf As String) As Long
Public Declare Function P13_ValFromAscii Lib "P13W32.DLL" Alias "_P13_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Long) As Long
Public Declare Function P13_ValGetBits Lib "P13W32.DLL" Alias "_P13_ValGetBits@12" (ByVal oldvalue As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function P13_ValIncAscii Lib "P13W32.DLL" Alias "_P13_ValIncAscii@4" (ByRef asciistr As String) As Long
Public Declare Function P13_ValInccAscii Lib "P13W32.DLL" Alias "_P13_ValInccAscii@4" (ByRef asciistr As String) As Long
Public Declare Function P13_ValIsLower Lib "P13W32.DLL" Alias "_P13_ValIsLower@4" (ByVal value As Long) As Long
Public Declare Function P13_ValLenAscii Lib "P13W32.DLL" Alias "_P13_ValLenAscii@8" (ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function P13_ValPackRTCWD Lib "P13W32.DLL" Alias "_P13_ValPackRTCWD@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal count As Long) As Integer
Public Declare Function P13_ValPutBits Lib "P13W32.DLL" Alias "_P13_ValPutBits@16" (ByVal oldvalue As Integer, ByVal newfld As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function P13_ValToAscii Lib "P13W32.DLL" Alias "_P13_ValToAscii@16" (ByVal value As Long, ByRef asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function P13_ValToUpper Lib "P13W32.DLL" Alias "_P13_ValToUpper@4" (ByVal value As Long) As Long
Public Declare Function P13_ValUnpackRTCWD Lib "P13W32.DLL" Alias "_P13_ValUnpackRTCWD@28" (ByVal cwd As Integer, ByRef bcastflag As Long, ByRef mcflag As Long, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef count As Long) As Long

'/**
'*
'*  Bus controller configuration options
'*
'**/

Public Const BCCFG_DEFAULT As Long = &H0 '//Select all default settings
Public Const BCCFG_ENABLE As Long = &H0  '//Enable bus controller (default)
Public Const BCCFG_DISABLE As Long = &H1 '//Disable bus controller
Public Const BCCFG_TRIGNONE As Long = &H0    '//No trigger (default)
Public Const BCCFG_TRIGEXT As Long = &H10 '//Trigger external
Public Const BCCFG_TRIGSTART As Long = &H20   '//Trigger external start
Public Const BCCFG_NOINTHALT As Long = &H0   '//Do not generate interrupt on halt (default)
Public Const BCCFG_INTHALT As Long = &H100 '//Generate interrupt on halt
Public Const BCCFG_NOINTPAUSE As Long = &H0  '//Do not generate interrupt on pause (default)
Public Const BCCFG_INTPAUSE As Long = &H200    '//Generate interrupt on pause
Public Const BCCFG_NOLOOPMAX As Long = &H0   '//Disable maximum loop count (default)
Public Const BCCFG_LOOPMAX As Long = &H1000 '//Enable maximum loop count
Public Const BCCFG_NOSTEP As Long = &H0  '//Disable single stepping (default)
Public Const BCCFG_STEP As Long = &H2000    '//Enable single stepping
Public Const BCCFG_MC01 As Long = &H0    '//Select SA=00000 or SA=11111 for mode codes (default)
Public Const BCCFG_MC1 As Long = &H1000000 '//Select SA=11111 for mode codes
Public Const BCCFG_MC0 As Long = &H2000000 '//Select SA=00000 for mode codes
Public Const BCCFG_MCNONE As Long = &H3000000  '//Disable mode codes
Public Const BCCFG_SYNCALL As Long = &H0 '//Sync on all messages (default)
Public Const BCCFG_SYNCSEL As Long = &H40000000 '//Selective sync

'/**
'*
'*  Monitor configuration options
'*
'**/
